--- a/deployment/.env
+++ b/deployment/.env
@@ -12,7 +12,7 @@ ADMIN_EMAIL=sh2091@cam.ac.uk
 SECRET_KEY=THIS_SHOULD_BE_CHANGE_LATER_ON
 # A mongodb url which is used to connect to mongodb and store all your chat data produced by the tod system
 # we suggets to use mongodb cloud service and create your collection name with the model name.
-MONGO_URI=mongodb+srv://songbo:B078Gd3S5tp2x6s4@db-mongodb-lon1-57511-3a70312b.mongo.ondigitalocean.com/user?tls=true&authSource=admin&replicaSet=db-mongodb-lon1-57511
+MONGO_URI=Your_mongo_url
 
 # This two config is used to setup the web interface or the domain name of the web page
 # Therefore if you are using ip port directly, you can just replace the 127.0.0.1 below
