--- a/deployment/.env
+++ b/deployment/.env
@@ -4,6 +4,14 @@ REDIS_PASSWORD=Humaneval123456
 REDIS_ADDRESS=host.docker.internal
 
 
+#[mongodb]
+# If you want to deploy mongodb by yourself, you chould modify the mongodb component in here.
+# After deploying the mongdb follow the command in readme, don't forget to modify the MONGO_URI
+MONGO_INITDB_ROOT_USERNAME=root
+MONGO_INITDB_ROOT_PASSWORD=root12345
+wiredTigerCacheSizeGB = 2
+
+
 #[human_eval_tool]
 # admin email which will be used for admin login, you have to create an admin account first with this email on the web page
 ADMIN_EMAIL=sh2091@cam.ac.uk
@@ -12,7 +20,8 @@ ADMIN_EMAIL=sh2091@cam.ac.uk
 SECRET_KEY=THIS_SHOULD_BE_CHANGE_LATER_ON
 # A mongodb url which is used to connect to mongodb and store all your chat data produced by the tod system
 # we suggets to use mongodb cloud service and create your collection name with the model name.
-MONGO_URI=Your_mongo_url
+# The example here is the mongo uri if you deploy the mongodb by yourself.
+MONGO_URI=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@host.docker.internal:27017/mt5
 
 # This two config is used to setup the web interface or the domain name of the web page
 # Therefore if you are using ip port directly, you can just replace the 127.0.0.1 below
@@ -46,13 +55,6 @@ rg_model_id=${MODEL_NAME}_rg
 # such as you have your own model or you don't want to seperate rg and dst, you could just modify the "load_own_model" method in that file.
 
 
-#[mongodb]
-# If you want to deploy mongodb by yourself, you chould modify the mongodb component in here.
-# After deploying the mongdb follow the command in readme, don't forget to modify the MONGO_URI on the top
-#      MONGO_INITDB_ROOT_USERNAME = root
-#      MONGO_INITDB_ROOT_PASSWORD = x+s9zI&VA!s
-#      TZ = Asia/Shanghai
-#      wiredTigerCacheSizeGB = 2
 
 
 #[tod_system]
