--- a/deployment/.env
+++ b/deployment/.env
@@ -9,6 +9,10 @@ REDIS_ADDRESS=host.docker.internal
 # After deploying the mongdb follow the command in readme, don't forget to modify the MONGO_URI
 MONGO_INITDB_ROOT_USERNAME=root
 MONGO_INITDB_ROOT_PASSWORD=root12345
+ME_CONFIG_MONGODB_ADMINUSERNAME=${MONGO_INITDB_ROOT_USERNAME}
+ME_CONFIG_MONGODB_ADMINPASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
+ME_CONFIG_BASICAUTH_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+ME_CONFIG_BASICAUTH_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
 wiredTigerCacheSizeGB = 2
 
 
