--- a/deployment/docker-compose_mongodb.yml
+++ b/deployment/docker-compose_mongodb.yml
@@ -15,19 +15,17 @@ services:
       - "../data/mongo/logs:/var/log/mongodb"
     
   mongo-express:
+    links:
+       - mongodb:mongo
     image: mongo-express:latest
     container_name: mongo-express
     restart: always
     ports:
       - 8081:8081
     environment:
+      - ME_CONFIG_OPTIONS_EDITORTHEME=3024-night
       - ME_CONFIG_MONGODB_SERVER=mongodb
     env_file:
       - .env
     depends_on:
       - mongodb
-
-
-networks:
-  default:
-    name: mongodb_network
