--- a/deployment/nginx/pro.conf
+++ b/deployment/nginx/pro.conf
@@ -3,7 +3,7 @@ upstream server {
 }
 
 upstream mongo {
-    server 127.0.0.1:8081
+    server 127.0.0.1:8081;
 }
 
 server {
@@ -43,19 +43,19 @@ server {
         proxy_set_header Host "localhost";
     }
 
-    if ( $ME_CONFIG_BASICAUTH == 'true'){
-        location /mongo {
-            proxy_http_version 1.1;
-            proxy_buffering off;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "Upgrade";
-            proxy_pass http://mongo;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host "localhost";
 
-        }
+    location /mongo {
+        proxy_http_version 1.1;
+        proxy_buffering off;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_pass http://mongo;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host "localhost";
+
+
     }
 
 }
