feature: add local mongodb admin page which help to download data

--- a/deployment/.env
+++ b/deployment/.env
@@ -1,7 +1,7 @@
 #[project_redis]
 REDIS_PASSWORD=Humaneval123456
 # please set up the address to your redis server, this address should be the ip address of your redis server's machine
-REDIS_ADDRESS=host.docker.internal
+REDIS_ADDRESS=127.0.0.1
 
 
 #[mongodb]
@@ -25,8 +25,9 @@ ADMIN_EMAIL=sh2091@cam.ac.uk
 SECRET_KEY=THIS_SHOULD_BE_CHANGE_LATER_ON
 # A mongodb url which is used to connect to mongodb and store all your chat data produced by the tod system
 # we suggets to use mongodb cloud service and create your collection name with the model name.
-# The example here is the mongo uri if you deploy the mongodb by yourself.
-MONGO_URI=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@host.docker.internal:27017/mt5
+# The example here is the mongo uri if you deploy the mongodb by yourself with given command:
+# bash deploy.sh --component mongodb
+MONGO_URI=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@127.0.0.1:27017/mt5
 
 # This two config is used to setup the web interface or the domain name of the web page
 # Therefore if you are using ip port directly, you can just replace the 127.0.0.1 below
@@ -34,7 +35,7 @@ MONGO_URI=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@
 # If you are going to use https, please change add your ssl certificate and key to deployment/nginx/ssl and modify the
 # example.ssl.conf to ssl.conf
 USE_SSL=false
-REACT_APP_SERVER_URL=http://127.0.0.1
+REACT_APP_SERVER_URL=https://www.dialeval.online
 # or https://domain name if you set USE_SSL = true and put the ssl certifacte in the nginx/ssl folder 
 REACT_APP_CLIENT_URL=${REACT_APP_SERVER_URL}
 
