feature: add mongodb deployment

--- a/deployment/nginx/pro.conf
+++ b/deployment/nginx/pro.conf
@@ -2,9 +2,9 @@ upstream server {
     server 127.0.0.1:5000;
 }
 
-upstream mongo {
-    server 127.0.0.1:8081;
-}
+# upstream mongo {
+#     server 127.0.0.1:8081;
+# }
 
 server {
     listen 80;
