--- a/deployment/docker-compose_het_prod.yml
+++ b/deployment/docker-compose_het_prod.yml
@@ -43,10 +43,10 @@ services:
             # - frontend:/usr/share/nginx/html
             - ./nginx/pro.conf:/etc/nginx/conf.d/default.conf
             - ./nginx/ssl:/etc/nginx/ssl
-        ports:
-            - "80:80"
-            - "443:443"
-            - "8080:8080"
+        # ports:
+        #     - "80:80"
+        #     - "443:443"
+        #     - "8080:8080"
         network_mode: host
         env_file:
             - .env
