--- a/deployment/.env
+++ b/deployment/.env
@@ -27,7 +27,7 @@ SECRET_KEY=THIS_SHOULD_BE_CHANGE_LATER_ON
 # we suggets to use mongodb cloud service and create your collection name with the model name.
 # The example here is the mongo uri if you deploy the mongodb by yourself with given command:
 # bash deploy.sh --component mongodb
-MONGO_URI=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@127.0.0.1:27017/
+MONGO_URI=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@127.0.0.1:27017/mt5?authSource=the_database&authMechanism=SCRAM-SHA-1
 
 # This two config is used to setup the web interface or the domain name of the web page
 # Therefore if you are using ip port directly, you can just replace the 127.0.0.1 below
